--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,11 @@
 @import url(./normalize.css);
 @import url(./reset.css);
+/* 기본 스타일 */
+*, *::before, *::after {
+  /* 첫번째 자식 요소 before, 마지막 자식요소 after */
+  box-sizing: border-box;
+}
+
 /* 본문 스타일 */
 body {
   background: beige;
@@ -10,7 +16,6 @@ body {
 .header, .visual, .main, .slogan, .footer-inner{
   /* sellecter grouping */
   width: 940px;
-  box-sizing: border-box;
   margin: 0 auto;
 }
 
@@ -33,6 +38,28 @@ body {
 .main {
   background: lightgreen;
   height: 50vh;
+  display : flow-root;
+  padding: 0 15px;
+}
+
+.group {
+  margin: 0 15px;
+  float: left;
+}
+
+.group1 {
+  background-color: burlywood;
+  width: 250px;
+}
+
+.group2 {
+  background-color: whitesmoke;
+  width: 380px;
+}
+
+.group3 {
+  background-color: salmon;
+  width: 190px;
 }
 
 /* 슬로건 */
