--- a/styles/style.css
+++ b/styles/style.css
@@ -37,14 +37,12 @@ body {
 /* 메인 */
 .main {
   background: lightgreen;
-  height: 50vh;
-  display : flow-root;
-  padding: 0 15px;
-}
-
-.group {
-  margin: 0 15px;
-  float: left;
+  min-height: 450px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 30px;
 }
 
 .group1 {
