로고 배치 완료

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 @import url(./normalize.css);
 @import url(./reset.css);
+
 /* 기본 스타일 */
 *, *::before, *::after {
   /* 첫번째 자식 요소 before, 마지막 자식요소 after */
@@ -8,7 +9,7 @@
 
 /* 본문 스타일 */
 body {
-  background: beige;
+  background: #ccc;
   font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
 }
 
@@ -21,11 +22,25 @@ body {
 
 /* 헤더 */
 .header {
-  background: pink;
+  background: #fff;
   padding: 0 30px;
   /* border-box : width(padding+border)+margin */
   /* auto 명령은 margin 만 가능하다 */
   height: 15vh;
+  border-radius: 0 0 15px 15px;
+  position: relative;
+}
+
+/* 로고 */
+.logo {
+  position: absolute;
+  top: 45px;
+  left: 60px;
+}
+
+/* 텍스트 링크 모음 */
+.member {
+  background-color:aqua;
 }
 
 /* 비주얼 */
