--- a/styles/style.css
+++ b/styles/style.css
@@ -61,6 +61,12 @@ body {
   background-color: coral;
   padding: 6px 10px;
   display: inherit;
+  text-transform: uppercase;
+}
+
+/* 마지막 li 요소를 선택하고, a 요소를 선택한다. */
+.member li:last-child a {
+  padding-right: 0;
 }
 
 .divider {
