--- a/styles/style.css
+++ b/styles/style.css
@@ -47,9 +47,13 @@ body {
 
 /* 텍스트 링크 모음 */
 .member {
-  /* background-color:aqua; */
   text-align: right;
   padding: 4px 0;
+  /* position 속성을 활용하여 .member 영역을 이동시킴 */
+  /* position: relative;
+  right: -10px; */
+  /* transform 속성을 활용하여 .member 영역을 이동시킴 */
+  transform: translateX(10px);
 }
 
 .member li{
@@ -58,16 +62,17 @@ body {
 }
 
 .member a {
-  background-color: coral;
   padding: 6px 10px;
   display: inherit;
   text-transform: uppercase;
 }
 
 /* 마지막 li 요소를 선택하고, a 요소를 선택한다. */
-.member li:last-child a {
+/* .member li:last-child a {
   padding-right: 0;
-}
+} */
+
+
 
 .divider {
   margin-right: 4px;
