--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,16 @@
 @import url(./normalize.css);
 @import url(./reset.css);
 
+/* 숨김 컨텐츠 */
+.a11y-hidden {
+  background-color: red;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip-path: polygon(0 0, 0 0, 0 0);
+}
+
 /* 기본 스타일 */
 *, *::before, *::after {
   /* 첫번째 자식 요소 before, 마지막 자식요소 after */
@@ -39,7 +49,6 @@ body {
   padding: 0 30px;
   /* border-box : width(padding+border)+margin */
   /* auto 명령은 margin 만 가능하다 */
-  height: 15vh;
   border-radius: 0 0 15px 15px;
   position: relative;
 }
