--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 @import url(./normalize.css);
-/* @import url(./reset.css); */
+@import url(./reset.css);
 
 /* 숨김 컨텐츠 */
 .a11y-hidden {
@@ -31,7 +31,7 @@ a {
 body {
   /* em, rem 단위 */
   font-size: 1.4rem;
-  color: #222;
+  color: #212121;
   background: #ccc linear-gradient(to bottom, #ccc 0%, #eee 35%, #fff 70%, #fff 100%);
   font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
 }
@@ -63,7 +63,7 @@ body {
 /* 텍스트 링크 모음 */
 .member {
   text-align: right;
-  padding: 4px 0;
+  padding: 10px 0;
   /* position 속성을 활용하여 .member 영역을 이동시킴 */
   /* position: relative;
   right: -10px; */
@@ -93,6 +93,7 @@ body {
 }
 
 .menu {
+  border-top: 2px solid #212121;
   background: #e85e2c
   linear-gradient(
     to bottom,
@@ -101,6 +102,32 @@ body {
     #e85e2c 70%,
     #ef9126 100%
   );
+  border-radius: 0 0 5px 5px;
+  display: flow-root;
+  padding-left: 230px;
+  height: 47px;
+}
+
+.menu-item {
+  float: left;
+  border-left: 2px solid #fff;
+}
+
+.menu-button {
+  border: 0;
+  background: transparent;
+  padding: 0 23px;
+  line-height: 45px;
+  font-size: 15px;
+  font-weight: 700;
+  color: #fff;
+  text-shadow: 1px 1px 0 #212121;
+}
+
+.sub-menu {
+  background-color : pink;
+  position: absolute;
+  display: none;
 }
 
 /* background-color -> 배경색상 */
