--- a/styles/style.css
+++ b/styles/style.css
@@ -113,6 +113,7 @@ body {
   border-left: 2px solid #fff;
 }
 
+/* 구체성 점수 10점 */
 .menu-button {
   border: 0;
   background: transparent;
@@ -122,6 +123,18 @@ body {
   font-weight: 700;
   color: #fff;
   text-shadow: 1px 1px 0 #212121;
+}
+
+
+/* 구체성 점수 20점 */
+.is-active .menu-button {
+  color: #ff0;
+}
+
+.is-active .menu-button::after {
+  display: block;
+  border-top: 2px solid #212121;
+  content: "";
 }
 
 .sub-menu {
