--- a/styles/style.css
+++ b/styles/style.css
@@ -63,7 +63,7 @@ body {
 /* 텍스트 링크 모음 */
 .member {
   text-align: right;
-  padding: 10px 0;
+  padding: 4px 0;
   /* position 속성을 활용하여 .member 영역을 이동시킴 */
   /* position: relative;
   right: -10px; */
@@ -73,7 +73,7 @@ body {
 
 .member li{
   /* background-color: pink; */
-  display: inline;
+  display: inline-block;
 }
 
 .member a {
@@ -86,6 +86,10 @@ body {
 /* .member li:last-child a {
   padding-right: 0;
 } */
+
+.divider {
+  margin-right: 4px;
+}
 
 /* 메인 메뉴 */
 .navigation {
@@ -109,6 +113,7 @@ body {
 }
 
 .menu-item {
+  position: relative;
   float: left;
   border-left: 2px solid #fff;
 }
@@ -122,7 +127,7 @@ body {
   font-size: 15px;
   font-weight: 700;
   color: #fff;
-  text-shadow: 1px 1px 0 #212121;
+  text-shadow: 1px 1px 0 #212121, -1px -1px 0 #212121;ß
 }
 
 
@@ -140,7 +145,18 @@ body {
 .sub-menu {
   background-color : pink;
   position: absolute;
+  left: 0;
+  top: 47px;
   display: none;
+}
+
+.is-active .sub-menu {
+  display: block;
+}
+
+.sub-menu li {
+  display: inline-block;
+  padding-left: 1em;
 }
 
 /* background-color -> 배경색상 */
