서브메뉴 링크 스타일 적용

--- a/styles/style.css
+++ b/styles/style.css
@@ -96,7 +96,7 @@ body {
 
 /* 메인 메뉴 */
 .navigation {
-  padding-bottom: 80px;
+  padding-bottom: 40px;
 }
 
 .menu {
@@ -150,9 +150,9 @@ body {
 }
 
 .sub-menu {
-  background-color : pink;
   position: absolute;
   top: 47px;
+  padding: 4px 0;
   display: none;
 }
 
@@ -171,7 +171,6 @@ body {
 
 .sub-menu li {
   display: inline-block;
-  background-color: gold;
   padding-left: 1em;
 }
 
@@ -195,6 +194,15 @@ body {
 
 .sub-menu a:hover::before, .sub-menu a:focus::before {
   content: "\e800";
+}
+
+.sub-menu a:hover, .sub-menu a:focus {
+  color: red;
+}
+
+.sub-menu a {
+  display: inline-block;
+  padding: 6px 0;
 }
 
 /* background-color -> 배경색상 */
