--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 @import url(./fontello.css);
 @import url(./normalize.css);
 @import url(./reset.css);
+
 /* 숨김 콘텐츠 */
 .a11y-hidden {
   position: absolute;
@@ -153,7 +154,7 @@ body {
   display: inline-block;
 }
 .sub-menu a::before {
-  content: "\e805";
+  content: "\f192";
   font-family: "fontello";
   font-weight: normal;
   display: inline-block;
@@ -170,7 +171,7 @@ body {
 }
 .sub-menu a:hover::before,
 .sub-menu a:focus::before {
-  content: "\e801";
+  content: "\e800";
 }
 .sub-menu a {
   display: inline-block;
