로그인 마크업 수정 및 복습

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
-@import url(./fontello.css);
+
 @import url(./normalize.css);
 @import url(./reset.css);
+@import url(./fontello.css);
 
 /* 숨김 콘텐츠 */
 .a11y-hidden {
@@ -154,20 +155,21 @@ body {
   display: inline-block;
 }
 .sub-menu a::before {
-  content: "\f192";
-  font-family: "fontello";
+  font-family: 'fontello';
   font-weight: normal;
+  speak: none;
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
-  margin-right: 0.2em;
+  margin-right: .2em;
   text-align: center;
   font-variant: normal;
   text-transform: none;
   line-height: 1em;
-  margin-left: 0.2em;
+  margin-left: .2em;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  content: "\f192"
 }
 .sub-menu a:hover::before,
 .sub-menu a:focus::before {
