--- a/styles/style.css
+++ b/styles/style.css
@@ -410,7 +410,7 @@ body {
 /* 웹 관련 용어 */
 .term {
   margin-top: 20px;
-  border: 1px solid grey;
+  border: 1px solid #aaa;
   border-radius: 5px 5px 5px 5px;
   background: grey linear-gradient(to bottom, #ccc, #eee);
   padding: 10px 15px;
@@ -430,9 +430,15 @@ body {
   display: flow-root;
 }
 
-.term-list-subject {
+.term-list-subject,
+.term-list-brief {
   float: right;
   width: 145px;
+}
+
+.term-list-subject {
+  color: navy;
+  font-weight: 500;
 }
 
 .term-list-turmbnail {
@@ -444,9 +450,17 @@ body {
 }
 
 .term-list-brief {
-  margin-top: 10px;
+  margin-top: 5px;
+  line-height: 1.5;
+}
+
+.cross .term-list-subject,
+.cross .term-list-brief {
+  float: left;
+}
+
+.cross .term-list-turmbnail {
   float: right;
-  width: 145px;
 }
 
 /* 슬로건 */
