--- a/styles/style.css
+++ b/styles/style.css
@@ -287,12 +287,10 @@ body {
 }
 
 .group2 {
-  background-color: salmon;
   width: 380px;
 }
 
 .group3 {
-  background-color: gold;
   width: 190px;
 }
 
@@ -396,7 +394,7 @@ body {
 
 .validation-list a {
   display: block;
-  border: 2px solid #aaa;
+  border: 1px solid #aaa;
   border-radius : 20px 20px 20px 20px;
   background: url("./images/validation_icon.png") no-repeat 25px 45%, #ccc linear-gradient(to bottom, #ccc, #eee);
   height: 40px;
@@ -461,6 +459,120 @@ body {
 
 .cross .term-list-turmbnail {
   float: right;
+}
+
+/* 검색 폼 */
+.search-form {
+  background: grey linear-gradient(to bottom, #ccc, #eee);
+  border: 1px solid #aaa;
+  border-radius: 15px 15px 0 0;
+  padding : 15px 25px 10px 25px;
+}
+
+.search-form-inner {
+  display: flex;
+  flex-flow: row nowrap;
+}
+
+.form-group {
+  flex-grow: 1;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  padding-right: 10px;
+}
+
+.form-group-label {
+  flex-shrink: 0;
+  margin-right: 10px;
+}
+
+.form-group-input {
+  border: 1px solid #aaa;
+  border-radius: 3px;
+  height: 24px;
+  padding: 1px 1px 1px 5px;
+  flex-grow: 1;
+  min-width: 0;
+  width: 100%;
+}
+
+.search-button {
+  flex-shrink: 0;
+  background-color: #000;
+  color: #fff;
+  height: 24px;
+  border: 0;
+  border-radius: 3px;
+  padding: 0 10px;
+  font-size: 1.2rem;
+}
+
+/* 공지사항 및 자료실 */
+.board {
+  margin-top: 20px;
+}
+
+.tab-panel {
+  display: none;
+}
+
+.is-select.tab-panel {
+  display: block;
+}
+
+.tab-list {
+  display: flex;
+  flex-flow: row nowrap;
+}
+
+.tab {
+  background-color: #ccc;
+  color: #666;
+  border: 1px solid #aaa;
+  border-radius: 5px 5px 0 0;
+  padding: 5px 10px;
+}
+
+.is-select.tab {
+  background-color: #fff;
+  color: orangered;
+  border-color: currentColor currentColor #fff currentColor;
+}
+
+.board {
+  position: relative;
+}
+
+.board-list li {
+  margin-top: 10px;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between
+}
+
+.board-list a {
+  flex-grow: 1;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.board-list time {
+  flex-grow: 0;
+  margin-left: 10px;
+}
+
+
+.board-more {
+  position: absolute;
+  top: -8px;
+  right: -8px;
+  padding: 8px;
+}
+
+.icon-plus::before {
+  color: teal;
 }
 
 /* 슬로건 */
